# ma-malloc

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  hammer.cc  main.c  malloc.c  malloc.h  malloc_new.c  malloc_old.c  malloc_super_old.c  manager.cc  test.sh
.github/workflows/: test.yml
include/: malloc.h
include/libc/: assert.h  ctype.h  internal.h  stdio.h  stdlib.h  string.h
include/ma/: internal.h  ma.h  malloc.h  mutex.h  sysdeps.h  threads.h
include/ma/libc/: assert.h  ctype.h  errno.h  internal.h  stdio.h  stdlib.h  string.h
src/: aligned_alloc.c  arena.c  calloc.c  chunk.c  common.c  debug.c  extensions.c  free.c  libc.c  linux.c  malloc.c  opts.c  pthread.c  realloc.c  state.c  thread.c
src/sysdeps/: CMakeLists.txt  linux.c
tests/: stress.cc  test.sh
